# bootcamp_webscrapy

./: README.md  pyproject.toml
cert/: mitmproxy-ca-cert.pem
docker/: docker-compose.yml
src/browser/: generic_crawler.py
src/browser/provider/: generic_b_crawler.py
src/mitm/addon/: proxy.py
src/request/: download-stream.py  generic_crawler.py  get_my_ip.py  r_ml_simple.py  r_pda_scrolldown.py  s_cc_fail_login.py  s_cc_login.py
