[tool.poetry]
name = "bootcamp-webscrapy"
version = "0.1.0"
description = ""
authors = ["Rafael Panegassi <rm.panegassi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.3"
mitmproxy = "^11.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
